--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: python
 python:
   - "2.7"
+  - "3.6"
+install:
+  - pip install -r requirements.txt
+  - python setup.py install
+script:
+  - cd tests && bash test.sh && cd ../
