--- a/tests/datagen.conf
+++ b/tests/datagen.conf
@@ -1,6 +1,8 @@
 ; Data generation config file
 num_users=10000
-num_threads=4
+num_threads=3
 num_records_per_user=3
 offset=0
 data_path=data
+num_antennas=100
+num_antennas_per_user=10
