update the data_gen to comply with the new format, add the .idea to ignore and the config file now generate a year worth of data. Changed as well the callee_tower_id to call_length

--- a/tests/datagen.conf
+++ b/tests/datagen.conf
@@ -1,7 +1,7 @@
 ; Data generation config file
 num_users=10000
-num_threads=3
-num_records_per_user=3
+num_threads=6
+num_records_per_user=5500
 offset=0
 data_path=data
 num_antennas=100
