--- a/tests/datagen.conf
+++ b/tests/datagen.conf
@@ -1,7 +1,7 @@
 ; Data generation config file
 num_users=10000
 num_threads=6
-num_records_per_user=5500
+num_records_per_user=50
 offset=0
 data_path=data
 num_antennas=100
