--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: python
 python:
-- '2.7'
-- '3.6'
+  - '2.7'
+  - '3.6'
 install:
-- pip install -r requirements.txt
-- python setup.py install
+  - pip install flake8
+  - pip install -r requirements.txt
+  - python setup.py install
+before_script:
+  - flake8 .
 script:
-- cd tests && bash test.sh && cd ../
-- python setup.py clean --all
+  - cd tests && bash test.sh && cd ../
+  - python setup.py clean --all
 deploy:
   provider: pypi
   user: shubhamjain0594
