--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ scipy
 scikit-learn
 setuptools
 configargparse
+six
 git+https://github.com/emalgorithm/bandicoot.git@master
+git+https://github.com/OPAL-Project/codejail.git
