--- a/tests/datagen.conf
+++ b/tests/datagen.conf
@@ -1,7 +1,7 @@
 ; Data generation config file
 num_users=1000
-num_threads=6
-num_records_per_user=10
+num_threads=3
+num_records_per_user=100
 offset=0
 data_path=data
 num_antennas=100
