--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - pip install -r requirements.txt
   - python setup.py install
   - deactivate
-  - useradd -ms /bin/bash sandbox
+  - sudo useradd -ms /bin/bash sandbox
   - pwd
   - ls
 before_script:
