--- a/tests/Dockerfile36
+++ b/tests/Dockerfile36
@@ -11,7 +11,7 @@ RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selectio
 
 RUN apt-get upgrade -y --no-install-recommends
 
-RUN apt-get install -y python-pip python-dev gcc
+RUN apt-get install -y python3-pip python3-dev gcc
 RUN apt-get install -y apparmor apparmor-profiles apparmor-utils
 RUN apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*
 RUN apt-get update && apt-get install -y git
@@ -21,34 +21,32 @@ RUN apt-get install -y libpthread-stubs0-dev
 
 RUN apt-get install -y curl
 
-RUN pip install --upgrade pip
-
 RUN apt-get install -y build-essential
 
 RUN rm -rf /etc/apparmor.d/docker-engine
 
-COPY . /usr/opalalgorithms
+RUN mkdir /usr/opalalgorithms
+COPY opalalgorithms /usr/opalalgorithms/opalalgorithms
+COPY requirements.txt /usr/opalalgorithms/requirements.txt
+COPY setup.py /usr/opalalgorithms/setup.py
+COPY setup.cfg /usr/opalalgorithms/setup.cfg
+RUN mkdir /usr/opalalgorithms/tests
+COPY tests/requirements.txt /usr/opalalgorithms/tests/requirements.txt
 WORKDIR /usr/opalalgorithms
 
 # Install python library required
-RUN pip install git+https://github.com/OPAL-Project/codejail.git \
-    && pip install git+https://github.com/emalgorithm/bandicoot.git \
-    && pip install -r requirements.txt \
-    && python setup.py install
+RUN pip3 install -r tests/requirements.txt \
+    && python3 setup.py install
 
 # Creating virtualenv for sandbox
 RUN mkdir /usr/venv
-RUN pip install virtualenv \
+RUN pip3 install virtualenv \
     && virtualenv /usr/venv/sandbox \
     && chmod +x /usr/venv/sandbox/bin/activate
 
-RUN ls -alh /usr/venv/sandbox/bin/
-
 # install libraries in virtualenv
 RUN /bin/bash -c "source /usr/venv/sandbox/bin/activate \
-    && pip install git+https://github.com/emalgorithm/bandicoot.git \
-    && pip install git+https://github.com/OPAL-Project/codejail.git \
-    && pip install -r requirements.txt \
+    && pip3 install -r requirements.txt \
     && python setup.py install \
     && deactivate"
 
@@ -60,12 +58,16 @@ RUN useradd -ms /bin/bash opal
 USER opal
 
 COPY ./tests/setup_scripts/95-sandbox /etc/sudoers.d/
-RUN sudo ldconfig -v | grep -v ^$'\t'
+RUN sudo ldconfig
 
 # generate dummy data
 WORKDIR /home/opal
-COPY . opalalgorithms
-WORKDIR /home/opal/opalalgorithms/tests
-RUN python generate_data.py --conf datagen.conf
+RUN mkdir /home/opal/tests
+COPY tests/*.py /home/opal/tests/
+COPY tests/*.conf /home/opal/tests/
+COPY tests/sample_algos /home/opal/tests/sample_algos
+RUN sudo chown -R opal:opal .
+WORKDIR /home/opal/tests
+RUN python3 generate_data.py --conf datagen.conf
 
-CMD sh -c 'sudo mount -tsecurityfs securityfs /sys/kernel/security && sudo apparmor_parser -r -W /etc/apparmor.d/usr.venv.sandbox.bin.python && flake8 . && pytest .'
+CMD sh -c 'sudo mount -tsecurityfs securityfs /sys/kernel/security && sudo apparmor_parser -r -W /etc/apparmor.d/usr.venv.sandbox.bin.python && flake8 opalalgorithms && pydocstyle opalalgorithms && pytest .'
