--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services:
   - docker
 install:
   - sudo cp ./tests/setup_scripts/daemon.json /etc/docker/daemon.json
+  - pip install -r tests/requirements.txt
   - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]]; then docker-compose -f ./tests/docker-compose27.yml build tests; fi
   - if [[ $TRAVIS_PYTHON_VERSION == 3.6 ]]; then docker-compose -f ./tests/docker-compose36.yml build tests; fi
 before_script:
