Modified debug mode for the algorunner so that it returns result rather than time when debug mode is set to False.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ scipy
 scikit-learn
 setuptools
 six
-git+https://github.com/emalgorithm/bandicoot.git@master
-git+https://github.com/OPAL-Project/codejail.git
+python-dateutil
+-e git+https://github.com/emalgorithm/bandicoot.git@master
+-e git+https://github.com/OPAL-Project/codejail.git
